--- a/src/at/nsc/controllerView/view_CurrencyConverter.fxml
+++ b/src/at/nsc/controllerView/view_CurrencyConverter.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -27,7 +28,6 @@
         <TextField fx:id="textField_EuroField" minWidth="64.0" prefWidth="250.0" promptText="Type in Euro-Value here" GridPane.rowIndex="3" />
         <TextField fx:id="textField_YenField" editable="false" minWidth="64.0" prefWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
         <Label minHeight="-Infinity" minWidth="-Infinity" text="Euro" GridPane.rowIndex="2" />
-        <Label minHeight="-Infinity" minWidth="-Infinity" text="Yen" GridPane.columnIndex="2" GridPane.rowIndex="2" />
         <Label alignment="CENTER" contentDisplay="CENTER" minHeight="-Infinity" minWidth="64.0" prefWidth="250.0" text="Currency Converter" textAlignment="CENTER" GridPane.rowIndex="1">
             <font>
                 <Font name="System Bold Italic" size="24.0" />
@@ -38,5 +38,6 @@
                 <Image url="@../logo.png" />
             </image>
         </ImageView>
+      <ChoiceBox fx:id="choiceBox_YenBox" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
     </children>
 </GridPane>
